--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#002146</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="app_background_blue">#052C71B2</color>
 </resources>
