--- a/app/src/main/res/drawable/et_bg.xml
+++ b/app/src/main/res/drawable/et_bg.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#ededed" />
+    <stroke android:width="1dip" android:color="@color/app_background_blue"/>
     <corners android:radius="10dp" />
     <padding
         android:bottom="12dp"
