--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -113,7 +113,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:drawableStart="@drawable/ic_name"
-                    android:hint=" Name"
+                    android:hint=" Enter your full name"
                     android:inputType="textCapWords"
                     android:singleLine="true" />
 
@@ -125,7 +125,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:drawableStart="@drawable/email"
-                    android:hint=" Email"
+                    android:hint=" Your email goes here"
                     android:inputType="textEmailAddress" />
 
 
@@ -157,29 +157,6 @@
                         app:srcCompat="@drawable/ic_visibility" />
                 </LinearLayout>
 
-
-                <EditText
-                    android:id="@+id/registerRollNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:drawableStart="@drawable/id_number"
-                    android:hint=" ID #"
-                    android:inputType="textCapWords"
-                    android:singleLine="true" />
-
-
-                <EditText
-                    android:id="@+id/registerMobileNo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/et_bg"
-                    android:drawableStart="@drawable/ic_smartphone"
-                    android:hint=" Mobile #"
-                    android:inputType="number" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -187,26 +164,19 @@
                     android:background="@drawable/et_bg"
                     android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/registerUploadphoto"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/et_bg_no_padding"
-                        android:drawableStart="@drawable/ic_add_a_photo"
-                        android:hint="@string/upload_picture"
-                        android:stateListAnimator="@null" />
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-                    <ImageButton
-                        android:id="@+id/show_upload_loading"
-                        style="?android:buttonBarButtonStyle"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.15"
-                        android:contentDescription="checkUploadOrNot"
-                        android:scaleType="centerCrop"
-                        app:srcCompat="@drawable/ic_person" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:text="I agree all the statements in terms of service"
+                        android:textSize="14dp" />
+
                 </LinearLayout>
+
 
                 <Button
                     android:id="@+id/registerButton"
@@ -216,10 +186,46 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/text_background_primary"
-                    android:text="@string/register"
+                    android:text="@string/SignUp"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/padding_10dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/registerText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:padding="5dp"
+                        android:text="Already have an account?"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="15dp" />
+
+
+                    <TextView
+                        android:id="@+id/tvSignUp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.8"
+                        android:gravity="left"
+                        android:padding="5dp"
+                        android:text="Sign In"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
 
                 <ProgressBar
                     android:id="@+id/loadingSignUp"
