--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
     <color name="app_background_blue">#052C71B2</color>
+    <color name="bgBottomNavigation">#fe485a</color>
+
 </resources>
